pre pull master

--- a/ClinicaVeterinaria/Views/Home/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Home/Index.cshtml
@@ -86,7 +86,7 @@
                     <p>Accedi al tuo account o registrati per usufruire dei nostri servizi.</p>
                     <p class="lead">
                         <a class="btn btn-success btn-lg" href="#" role="button">Accedi</a>
-                        <a class="btn btn-outline-success btn-lg" href="#" role="button">Registrati</a>
+                        <a class="btn btn-info btn-lg" href="#" role="button">Registrati</a>
                     </p>
                 </div>
             </div>
@@ -96,19 +96,19 @@
         </div>
     </div>
     <div class="row justify-content-around my-5">
-        <div class="col-md-4 vet p-4 mb-4">
-            <div class="d-flex align-items-center">
-                <i class="bi bi-clipboard2-pulse fs-4 me-2"></i>
-                <h3 class="mb-0">Esperienza Professionale</h3>
-            </div>
-            <p class="mt-2 mb-0">Abbiamo il personale più qualificato per dare ai vostri animali le cure e i trattamenti migliori.</p>
-        </div>
         <div class="col-md-4 farm p-4 mb-4">
             <div class="d-flex align-items-center">
                 <i class="bi bi-clock fs-4 me-2"></i>
                 <h3 class="mb-0">24/7 Aperti</h3>
             </div>
             <p class=" mt-2 mb-0">Siamo aperti 24h ogni giorno così da poterci occupare dei vostri preziosi animali in qualsiasi momento.</p>
+        </div>
+        <div class="col-md-4 vet p-4 mb-4">
+            <div class="d-flex align-items-center">
+                <i class="bi bi-clipboard2-pulse fs-4 me-2"></i>
+                <h3 class="mb-0">Esperienza Professionale</h3>
+            </div>
+            <p class="mt-2 mb-0">Abbiamo il personale più qualificato per dare ai vostri animali le cure e i trattamenti migliori.</p>
         </div>
     </div>
 </div>
