--- a/ClinicaVeterinaria/Views/Prodotti/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Prodotti/Index.cshtml
@@ -15,7 +15,7 @@
 
 <form asp-controller="Prodotti" asp-action="Index" method="get">
     <div class="form-group">
-        <input type="text" name="prodotto" class="form-control" placeholder="Cerca per Nome Prodotto">
+        <input type="text" name="prodotto" class="form-control mb-3" placeholder="Cerca per Nome Prodotto">
     </div>
 </form>
 
