--- a/ClinicaVeterinaria/Views/Prodotti/Create.cshtml
+++ b/ClinicaVeterinaria/Views/Prodotti/Create.cshtml
@@ -36,7 +36,7 @@
                 <span asp-validation-for="PossibiliUsi" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="FotoProdotto" class="control-label"></label>
                 <input type="file" name="uploadedImage" class="form-control" />
                 <span asp-validation-for="FotoProdotto" class="text-danger"></span>
