--- a/ClinicaVeterinaria/Views/Utenti/Delete.cshtml
+++ b/ClinicaVeterinaria/Views/Utenti/Delete.cshtml
@@ -46,6 +46,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdUtente" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Details" asp-route-id="@Model.IdUtente">Back to List</a>
     </form>
 </div>
