--- a/ClinicaVeterinaria/Views/Utenti/Edit.cshtml
+++ b/ClinicaVeterinaria/Views/Utenti/Edit.cshtml
@@ -58,7 +58,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Details" asp-route-id="@Model.IdUtente">Back to List</a>
 </div>
 
 @section Scripts {
@@ -78,15 +78,6 @@
                 }
             });
         });
-        // // Script per mostrare/nascondere la password
-        // $(".toggle-password").click(function () {
-        //     $(this).toggleClass("fa-eye fa-eye-slash");
-        //     var input = $($(this).attr("toggle"));
-        //     if (input.attr("type") == "password") {
-        //         input.attr("type", "text");
-        //     } else {
-        //         input.attr("type", "password");
-        //     }
-        // });
+
     </script>
 }
