--- a/ClinicaVeterinaria/wwwroot/css/site.css
+++ b/ClinicaVeterinaria/wwwroot/css/site.css
@@ -40,6 +40,12 @@ body {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#278d3f', endColorstr='#8bcafe', GradientType=1 );
 }
 
+.card-img-top {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+}
+
 .farm {
     background-color: #278D3F; /*verde*/
     color: white;
