--- a/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
+++ b/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
@@ -129,7 +129,7 @@
                             if (User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier)?.Value == null)
                             {
                             <li class="nav-item ms-auto">
-                                <a class="nav-link @ViewBag.Text" asp-action="Login" asp-controller="Login">Accedi</a>
+                                <a class="nav-link @ViewBag.Text" asp-action="Index" asp-controller="Home">Accedi</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link @ViewBag.Text" asp-action="Registrazione" asp-controller="Login">Registrati</a>
