--- a/ClinicaVeterinaria/wwwroot/css/site.css
+++ b/ClinicaVeterinaria/wwwroot/css/site.css
@@ -110,5 +110,10 @@ body { /* classe per un'immagine di sfondo */
 }
 
 nav .nav-link{
-    
+    display: inline-block;
+    margin: 0;
+    padding: 0.5rem 1rem;
+    text-decoration: none;
+    font-size: 1rem;
+    line-height: 1.5;
 }
