correzione colore navlink nella navbar

--- a/ClinicaVeterinaria/Views/Prodotti/Delete.cshtml
+++ b/ClinicaVeterinaria/Views/Prodotti/Delete.cshtml
@@ -38,7 +38,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdProdotto" />
-        <input type="submit" value="Elimina" class="btn btn-danger" /> |
+        <input type="submit" value="Elimina" class="btn btn-danger" />
         <a class="btn btn-outline-success me-2" asp-action="Index">Lista Prodotti</a>
     </form>
 </div>
