--- a/ClinicaVeterinaria/Views/Prodotti/Edit.cshtml
+++ b/ClinicaVeterinaria/Views/Prodotti/Edit.cshtml
@@ -37,7 +37,7 @@
                 <input asp-for="PossibiliUsi" class="form-control" />
                 <span asp-validation-for="PossibiliUsi" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="FotoProdotto" class="control-label"></label>
                 <!-- Mostra l'immagine esistente se presente -->
                 @if (Model.FotoProdotto != null)
