--- a/ClinicaVeterinaria/Views/Ricoveri/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Ricoveri/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h1 class="mb-0">Lista Ricoveri</h1>
     <p class="mb-0">
-        <a asp-action="Create">Aggiungi ricovero</a>
+        <a class="btn btn-info me-2" asp-action="Create">Aggiungi ricovero</a>
     </p>
 </div>
 
