--- a/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
+++ b/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
@@ -32,13 +32,13 @@
                     <ul class="navbar-nav flex-grow-1">
                         <!-- Link per utenti non autenticati -->
                         <li class="nav-item">
-                            <a class="nav-link @ViewBag.Text" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="navlink @ViewBag.Text" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         @if (User.Identity.IsAuthenticated)
                         {
                             <!-- Dropdown Prodotti visibile a tutti gli utenti loggati -->
                             <li class="nav-item dropdown @ViewBag.Text">
-                                <a class="nav-link dropdown-toggle @ViewBag.Text" href="#" id="navbarDropdownProdotti" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="navlink dropdown-toggle @ViewBag.Text" href="#" id="navbarDropdownProdotti" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Prodotti
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownProdotti">
@@ -51,7 +51,7 @@
                             {
                                 <!-- Dropdown Visite per Veterinario -->
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle @ViewBag.Text" href="#" id="navbarDropdownVisite" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <a class="navlink dropdown-toggle @ViewBag.Text" href="#" id="navbarDropdownVisite" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                         Visite
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownVisite">
@@ -61,7 +61,7 @@
                                 </li>
                                 <!-- Dropdown Farmacia per Farmacista -->
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle @ViewBag.Text" href="#" id="navbarDropdownVisite" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <a class="navlink dropdown-toggle @ViewBag.Text" href="#" id="navbarDropdownVisite" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                         Farmacia
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownAccount">
@@ -72,7 +72,7 @@
                                 </li>
                                 <!-- Dropdown Amministrazione per Admin -->
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle @ViewBag.Text" href="#" id="navbarDropdownAmministrazione" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <a class="navlink dropdown-toggle @ViewBag.Text" href="#" id="navbarDropdownAmministrazione" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                         Amministrazione
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownAmministrazione">
@@ -86,7 +86,7 @@
                                 {
                                     <!-- Dropdown Visite per Veterinario -->
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle @ViewBag.Text" href="#" id="navbarDropdownVisite" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <a class="navlink dropdown-toggle @ViewBag.Text" href="#" id="navbarDropdownVisite" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                             Visite
                                         </a>
                                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownVisite">
@@ -98,7 +98,7 @@
                                 @if (User.IsInRole("Farmacista"))
                                 {
                                     <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle @ViewBag.Text" href="#" id="navbarDropdownFarmacista" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <a class="navlink dropdown-toggle @ViewBag.Text" href="#" id="navbarDropdownFarmacista" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                             Farmacia
                                         </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownFarmacista">
@@ -111,7 +111,7 @@
                             
                             <!-- Link Benvenuto e Log-Out -->
                             <li class="nav-item dropdown ms-auto">
-                                <a class="nav-link dropdown-toggle @ViewBag.Text" href="#" id="navbarDropdownAccount" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="navlink dropdown-toggle @ViewBag.Text" href="#" id="navbarDropdownAccount" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     <span class="@(!User.IsInRole("Admin") ? "fw-bold @ViewBag.Text" : "fw-bold text-white")">
                                         Benvenuto, @userName @(!User.IsInRole("Admin") ? "(utente)" : "(ADMIN)")
                                     </span>
@@ -129,10 +129,10 @@
                             if (User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier)?.Value == null)
                             {
                             <li class="nav-item ms-auto">
-                                <a class="nav-link @ViewBag.Text" asp-action="Index" asp-controller="Home">Accedi</a>
+                                <a class="navlink @ViewBag.Text" asp-action="Index" asp-controller="Home">Accedi</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link @ViewBag.Text" asp-action="Registrazione" asp-controller="Login">Registrati</a>
+                                <a class="navlink @ViewBag.Text" asp-action="Registrazione" asp-controller="Login">Registrati</a>
                             </li>
                             }
                         }
