--- a/ClinicaVeterinaria/Views/Visite/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Visite/Index.cshtml
@@ -27,7 +27,7 @@
                 @Html.DisplayNameFor(model => model.IdAnimaleNavigation)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IdRicettaNavigation)
+                @Html.DisplayNameFor(model => model.IdRicettaNavigation.IdricettaMedica)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.PrezzoVisita)
