Creazione armadietti, cassetti

--- a/ClinicaVeterinaria/Views/Prodotti/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Prodotti/Index.cshtml
@@ -17,6 +17,9 @@
         <button type="submit" class="btn btn-outline-success ms-3 mb-3">Cerca</button>
     </div>
 </form>
+<p class="mb-0 text-end">
+    <a class="btn btn-success" asp-action="Create">Aggiungi Prodotto</a>
+</p>
 
 <div class="row mb-3">
     @foreach (var item in Model)
