--- a/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
+++ b/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownAccount">
                                         <li><a class="dropdown-item" asp-controller="Prodotti" asp-action="Create">Aggiungi Prodotto</a></li>
                                         <li><a class="dropdown-item" asp-controller="ProdottiInCassettoes" asp-action="Create">Smistamento</a></li>
-                                        <li><a class="dropdown-item" asp-controller="ProdottiInCassettoes" asp-action="Index">Archivio Farmaci</a></li>
+                                        <li><a class="dropdown-item" asp-controller="ProdottiInCassettoes" asp-action="Index">Archivio Farmaci</a></li>                                      
                                     </ul>
                                 </li>
                                 <!-- Dropdown Amministrazione per Admin -->
@@ -105,6 +105,7 @@
                                             <li><a class="dropdown-item" asp-controller="Prodotti" asp-action="Create">Aggiungi Prodotto</a></li>
                                             <li><a class="dropdown-item" asp-controller="ProdottiInCassettoes" asp-action="Create">Smistamento</a></li>
                                             <li><a class="dropdown-item" asp-controller="ProdottiInCassettoes" asp-action="Index">Archivio Farmaci</a></li>
+                                            <li><a class="dropdown-item" asp-controller="Armadietti" asp-action="Index">Armadietti</a></li>
                                         </ul>
                                     </li>
                                 }
