--- a/ClinicaVeterinaria/Views/Prodotti/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Prodotti/Index.cshtml
@@ -4,20 +4,22 @@
     ViewData["Title"] = "Index";
 }
 
-<p class="mb-0 text-end">
-    <a class="btn btn-success" asp-action="Create">Aggiungi Prodotto</a>
-</p>
 
-<div class="d-flex justify-content-between align-items-center mb-3">
+
+@* <div class="d-flex justify-content-between align-items-center mb-3">
     <h1 class="mb-0">Prodotti</h1>
     <button type="submit" class="btn btn-success">Cerca</button>
-</div>
+</div> *@
 
 <form asp-controller="Prodotti" asp-action="Index" method="get">
     <div class="form-group">
         <input type="text" name="prodotto" class="form-control" placeholder="Cerca per Nome Prodotto">
+        <button type="submit" class="btn btn-success">Cerca</button>
     </div>
 </form>
+<p class="mb-0 text-end">
+    <a class="btn btn-success" asp-action="Create">Aggiungi Prodotto</a>
+</p>
 
 <div class="row mb-3">
     @foreach (var item in Model)
