--- a/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
+++ b/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownAccount">
                                         <li><a class="dropdown-item" asp-controller="Prodotti" asp-action="Create">Aggiungi Prodotto</a></li>
                                         <li><a class="dropdown-item" asp-controller="ProdottiInCassettoes" asp-action="Create">Smistamento</a></li>
-                                        <li><a class="dropdown-item" asp-controller="ProdottiInCassettoes" asp-action="Index">Archivio Farmaci</a></li>
+                                        <li><a class="dropdown-item" asp-controller="ProdottiInCassettoes" asp-action="Index">Archivio Farmaci</a></li>                                      
                                     </ul>
                                 </li>
                                 <!-- Dropdown Amministrazione per Admin -->
@@ -105,6 +105,7 @@
                                             <li><a class="dropdown-item" asp-controller="Prodotti" asp-action="Create">Aggiungi Prodotto</a></li>
                                             <li><a class="dropdown-item" asp-controller="ProdottiInCassettoes" asp-action="Create">Smistamento</a></li>
                                             <li><a class="dropdown-item" asp-controller="ProdottiInCassettoes" asp-action="Index">Archivio Farmaci</a></li>
+                                            <li><a class="dropdown-item" asp-controller="Armadietti" asp-action="Index">Armadietti</a></li>
                                         </ul>
                                     </li>
                                 }
@@ -151,14 +152,15 @@
             &copy; 2024 - Clinica Veterinaria - <a class="text-decoration-none @ViewBag.Text" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
     @RenderSection("Scripts", required: false)
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+   
 </body>
 </html>
 
