--- a/ClinicaVeterinaria/Views/Visite/Edit.cshtml
+++ b/ClinicaVeterinaria/Views/Visite/Edit.cshtml
@@ -32,11 +32,11 @@
                 <select asp-for="IdAnimale" class="form-control" asp-items="ViewBag.IdAnimale"></select>
                 <span asp-validation-for="IdAnimale" class="text-danger"></span>
             </div>
-            <div class="form-group mb-3">
+@*             <div class="form-group mb-3">
                 <label asp-for="IdRicetta" class="control-label"></label>
                 <select asp-for="IdRicetta" class="form-control" asp-items="ViewBag.IdRicetta"></select>
                 <span asp-validation-for="IdRicetta" class="text-danger"></span>
-            </div>
+            </div> *@
 
             <div class="form-group mb-3">
                 <label asp-for="PrezzoVisita" class="control-label"></label>
