commit nuova view

--- a/ClinicaVeterinaria/Views/Cassettis/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Cassettis/Index.cshtml
@@ -5,37 +5,30 @@
 }
 
 <h1>Index</h1>
-
+@* https://via.placeholder.com/150 *@
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Descrizione)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IdArmadiettoNavigation)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Descrizione)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdArmadiettoNavigation.IdArmadietto)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.IdCassetto">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdCassetto">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdCassetto">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+
+<div class="row container justify-content-center">
+    @foreach (var item in Model)
+    {
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="/images/extra/Screenshot 2024-03-21 094010.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">@Html.DisplayFor(modelItem => item.Descrizione)</h5>
+                    <p class="card-text">Id Armadietto: @Html.DisplayFor(modelItem => item.IdArmadiettoNavigation.IdArmadietto)</p>
+                    <a href="@Url.Action("Edit", new { id = item.IdCassetto })" class="btn btn-primary">Edit</a>
+                    <a href="@Url.Action("Details", new { id = item.IdCassetto })" class="btn btn-secondary">Details</a>
+                    <a href="@Url.Action("Delete", new { id = item.IdCassetto })" class="btn btn-danger">Delete</a>
+          @*           @Html.ActionLink("Prodotti", "Prodotti", "Index", new { id = item.IdCassetto }, null) *@
+                    <a class="btn btn-danger" asp-action="GetArmadiettiWithCassetti" asp-controller="ProdottiInCassettoes" asp-route-id="@item.IdCassetto">Prodotti</a>
+
+                </div>
+            </div>
+        </div>
+    }
+</div>
+
+                    
