css pagina admin

--- a/ClinicaVeterinaria/Views/Utenti/Details.cshtml
+++ b/ClinicaVeterinaria/Views/Utenti/Details.cshtml
@@ -41,8 +41,8 @@
             </dl>
         </div>
         <div class="card-footer">
-            <a asp-action="Edit" asp-route-id="@Model.IdUtente" class="btn btn-primary">Modifica</a>
-            <a asp-action="Index" class="btn btn-secondary">Torna alla Lista</a>
+            <a asp-action="Edit" asp-route-id="@Model.IdUtente" class="btn ad">Modifica</a>
+            <a asp-action="Index" class="btn btn-outline-primary">Torna alla Lista</a>
         </div>
     </div>
 </div>
