--- a/ClinicaVeterinaria/Views/Visite/Create.cshtml
+++ b/ClinicaVeterinaria/Views/Visite/Create.cshtml
@@ -65,7 +65,7 @@
                     <input type="hidden" id="campoProdottiSelezionati" name="campoProdottiSelezionati" value="">
                 </div>
                 <!-- Pulsante per aggiungere prodotti -->
-                <button type="button" id="aggiungiProdotto" class="btn btn-primary mb-3">Aggiungi Prodotto</button>
+                <button type="button" id="aggiungiProdotto" class="btn btn-info mb-2">Aggiungi Prodotto</button>
 
                 <!-- Lista dei prodotti aggiunti -->
                 <ul id="listaProdotti"></ul>
