--- a/ClinicaVeterinaria/Views/ProdottiInCassettoes/Index.cshtml
+++ b/ClinicaVeterinaria/Views/ProdottiInCassettoes/Index.cshtml
@@ -5,18 +5,17 @@
     // Recupera i dati dalla ViewBag
     var prodottiInArmadietto = ViewBag.ProdottiInArmadietto as List<string>;
 }
-<p class="text-end mb-0">
-    <a class="btn btn-success" asp-action="Create">Aggiungi Prodotto nel cassetto</a>
-</p>
-
 <div class="d-flex justify-content-between align-items-center mb-3">
-    <h1>Archivio</h1>
-    <button class="btn btn-outline-success" type="submit">Cerca</button>
+    <h1 class="mb-0">Archivio</h1>
+    <p class="mb-0">
+        <a class="btn btn-success" asp-action="Create">Aggiungi Prodotto nel cassetto</a>
+    </p>
 </div>
 
 <form asp-controller="ProdottiInCAssettoes" asp-action="Index" method="get">
-    <div class="form-group mb-3">
+    <div class="form-group d-flex justify-content-between mb-3">
         <input type="text" name="prodotto" class="form-control" placeholder="Cerca il Nome del Prodotto">
+        <button class="btn btn-outline-success ms-3" type="submit">Cerca</button>
     </div>
 </form>
 
