--- a/ClinicaVeterinaria/Views/Utenti/Edit.cshtml
+++ b/ClinicaVeterinaria/Views/Utenti/Edit.cshtml
@@ -8,39 +8,38 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 }
 
-<h1>Edit</h1>
+<h1>Modifica</h1>
 
-<h4>Utenti</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="IdUtente" />
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Cognome" class="control-label"></label>
                 <input asp-for="Cognome" class="form-control" />
                 <span asp-validation-for="Cognome" class="text-danger"></span>
             </div>
 
             <!-- Campo per la nuova password -->
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label for="newPassword" class="control-label">Nuova Password</label>
                 <input type="password" id="newPassword" name="newPassword" class="form-control" />
                 <span toggle="#newPassword" class="fa fa-fw fa-eye field-icon toggle-password"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label for="confirmNewPassword" class="control-label">Conferma Nuova Password</label>
                 <input type="password" id="confirmNewPassword" name="confirmNewPassword" class="form-control" />
                 <span toggle="#confirmNewPassword" class="fa fa-fw fa-eye field-icon toggle-password"></span>
             </div>
 
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="FotoUtente" class="control-label"></label>
                 <!-- Mostra l'immagine esistente se presente -->
                 @if (Model.FotoUtente != null)
@@ -51,14 +50,10 @@
                 <span asp-validation-for="FotoUtente" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Modifica" class="btn ad" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
