css pagina admin

--- a/ClinicaVeterinaria/Views/Prodotti/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Prodotti/Index.cshtml
@@ -14,7 +14,7 @@
 <form asp-controller="Prodotti" asp-action="Index" method="get">
     <div class="form-group d-flex justify-content-between">
         <input type="text" name="prodotto" class="form-control mb-3" placeholder="Cerca per Nome Prodotto">
-        <button type="submit" class="btn btn-success ms-3 mb-3">Cerca</button>
+        <button type="submit" class="btn btn-outline-success ms-3 mb-3">Cerca</button>
     </div>
 </form>
 <p class="mb-0 text-end">
