--- a/ClinicaVeterinaria/Views/Visite/Create.cshtml
+++ b/ClinicaVeterinaria/Views/Visite/Create.cshtml
@@ -67,6 +67,8 @@
                 <div class="form-group">
                     <button type="button" id="aggiungiProdotto" class="btn btn-default">Aggiungi Prodotto</button>
                 </div>
+                <!-- Pulsante per aggiungere prodotti -->
+                <button type="button" id="aggiungiProdotto" class="btn btn-info mb-2">Aggiungi Prodotto</button>
 
                 <ul id="listaProdotti"></ul>
 
